@@ -1,5 +1,14 @@
 2017-05-31  Adrian Perez de Castro  <aperez@igalia.com>
 
+        [CMake] Do not pass -Wno-expansion-to-defined to Clang <4.0.0
+        https://bugs.webkit.org/show_bug.cgi?id=172750
+
+        Reviewed by Michael Catanzaro.
+
+        * Source/cmake/OptionsCommon.cmake:
+
+2017-05-31  Adrian Perez de Castro  <aperez@igalia.com>
+
         Consider enabling -Wno-expansion-to-defined for gcc 7
         https://bugs.webkit.org/show_bug.cgi?id=167643
 
